fix overflow to the right on mobile screens

--- a/public/output.css
+++ b/public/output.css
@@ -580,6 +580,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -588,20 +598,8 @@ video {
   margin-left: 6rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
 }
 
 .mt-20 {
@@ -739,6 +737,10 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -830,11 +832,6 @@ video {
 
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-b-split-red {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(108 16 10 / var(--tw-border-opacity));
 }
 
 .border-b-dark {
